fix: set white tab hover color for dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -132,6 +132,10 @@ input[type="radio"]:checked + label {
 .tab {
   @apply px-3 py-1 leading-none font-mono font-bold text-sm text-gray-500 hover:text-black;
 
+  &:hover {
+    @apply dark:text-white;
+  }
+
   span {
     @apply border-dotted border-b border-gray-400;
   }
